@@ -51,6 +51,14 @@
         Improve the fix for <bug>61439</bug> and exclude the JPA, JAX-WS and EJB
         annotations completely from the Tomcat distributions. (markt)
       </fix>
+      <fix>
+        Improve handling of endorsed directories. The endorsed directory
+        mechanism will only be used if the <code>JAVA_ENDORSED_DIRS</code>
+        system property is explictly set or if
+        <code>$CATALINA_HOME/endorsed</code> exists. When running on Java 9, any
+        such attempted use of the endorsed directory mechanism will trigger an
+        error and Tomcat will fail to start. (rjung)
+      </fix>
     </changelog>
   </subsection>
 </section>
